@@ -49,8 +49,7 @@ the <a href="http://svn.facebook.com/svnroot/thrift/">SVN repository</a>.</p>
 
 <p>The ThriftServer is run like:
 <pre>
-
-  ./bin/hbase thrift [-h|--help] [-p|--port PORT]
+  ./bin/hbase thrift -h|--help | [--port=PORT] start
 </pre>
 The default port is 9090.
 </p>
